# speasy

./: .coveragerc  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.ipynb  README.md  README.rst  environment.yml  lgtm.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: PRs.yml  check_for_gha_updates.yml  codeql.yml  contract.yml  e2e.yml  lint.yml  pythonpackage.yml  pythonpublish.yml  tests.yml  unit.yml  wasm_tests.yml
devtools/: apply_test_markers.py  publish_cassettes.py  scrub_existing_cassettes.py
docs/: Makefile  _cdpp3dview_frames_fallback.json  _generate_cdpp3dview_frames_table.py  _generate_uiowaephtool_table.py  _rst_gen_utils.py  amda.rst  amda_catalogs.rst  amda_datasets.rst  amda_example_1.rst  amda_example_2.rst  amda_example_3.rst  amda_example_4.rst  amda_example_get_catalog.rst  amda_example_get_user_catalog.rst  amda_example_get_user_timetable.rst  amda_example_list_catalogs.rst  amda_example_list_timetables.rst  amda_example_list_user_catalogs.rst  amda_example_list_user_timetables.rst  amda_examples.rst  amda_parameters.rst  amda_products.rst  amda_timetables.rst  conf.py  dev_index.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst  user_modules.rst
docs/dev/: index.rst  speasy.common.rst  speasy.config.rst  speasy.core.cache.rst  speasy.core.proxy.rst  speasy.core.rst  speasy.inventory.rst  speasy.products.rst  speasy.rst  speasy.webservices.amda.rst  speasy.webservices.cda.rst  speasy.webservices.csa.rst  speasy.webservices.rst  speasy.webservices.ssc.rst
docs/examples/: AMDA.ipynb  CDAWeb.ipynb  CSA.ipynb  Caches.ipynb  CatalogsAndTimeTables.ipynb  Cdpp3dView.ipynb  CompleteDemo.ipynb  Filtering.ipynb  GenericArchive.ipynb  Resampling.ipynb  SSCWeb.ipynb  index.rst  solo_epd.ipynb
docs/superpowers/plans/: 2026-05-08-pr1-foundation-uv-py310.md
docs/superpowers/specs/: 2026-05-08-speasy-modernisation-design.md
docs/user/: concepts.rst  configuration.rst  data_providers.rst  modules.rst  numpy.rst  plotting.rst  scipy.rst  webservices.rst
docs/user/3DView/: 3dview.rst
docs/user/Uiowa_eph_tool/: uiowa_eph_tool.rst
docs/user/amda/: amda.rst  amda_example_1.rst  amda_example_2.rst  amda_example_3.rst  amda_example_4.rst  amda_example_get_catalog.rst  amda_example_get_user_catalog.rst  amda_example_get_user_timetable.rst  (+7 more)
examples/: BokehDynamicPlot.ipynb  amda_example_1.py  amda_get_public_catalog.py  amda_get_public_timetable.py  amda_get_user_catalog.py  amda_get_user_timetable.py  amda_list_catalogs.py  amda_list_datasets.py  amda_list_parameters.py  amda_list_public_catalogs.py  amda_list_public_products.py  amda_list_public_timetables.py  amda_list_timetables.py  amda_list_user_catalogs.py  amda_list_user_timetables.py  amda_private.py  amda_public_data.py  amda_user_parameter.py  demo.ipynb  simple_getdata.py
plan/: BACKLOG.md  REVIEW.md
scripts/: cda_ws_missing_datasets.ipynb  direct_archive_yaml_gen.ipynb  release.sh  relocate_readme_images.py
speasy/: __init__.py  spwc2speasy.py
speasy/amda/: __init__.py  amda.py  dataset.py  indexes.py  inventory.py  obstree.py  parameter.py  rest.py  soap.py  timetable.py  tttree.py  utils.py
speasy/cache/: __init__.py  version.py
speasy/cdaweb/: __init__.py
speasy/common/: __cdf__.py  __init__.py  catalog.py  cdf.py  dataset.py  datetime_range.py  http.py  timetable.py  variable.py
speasy/config/: __init__.py  exceptions.py
speasy/core/: __init__.py  algorithms.py  any_files.py  data_containers.py  dataprovider.py  datetime_range.py  file_access.py  http.py  platform.py  span_utils.py  time.py  typing.py  url_utils.py
speasy/data_providers/: __init__.py
speasy/inventories/: __init__.py
speasy/inventory/: __init__.py  data_tree.py  indexes.py
speasy/plotting/: __init__.py  istp_hints.py
speasy/products/: __init__.py  base_product.py  catalog.py  dataset.py  timetable.py  variable.py
speasy/sscweb/: __init__.py
speasy/webservices/: __init__.py  dataprovider.py
spwc/: __init__.py  cli.py
spwc/amda/: __init__.py  amda.py  rest.py  soap.py
spwc/cache/: __init__.py  cache.py  test_cache.py  version.py
spwc/cdaweb/: __init__.py  cdaweb.py  test_cdaweb.py
spwc/common/: __cdf__.py  __init__.py  cdf.py  datetime_range.py  span_utils.py  variable.py
spwc/config/: __init__.py
spwc/proxy/: __init__.py
spwc/sscweb/: __init__.py
tests/: all.py  cassettes_manifest.json  conftest.py  test_3dview.py  test_amda.py  test_amda_catalog.py  test_amda_contract.py  test_amda_failures.py  test_amda_parameter.py  test_amda_timetable.py  test_cache.py  test_cache_migration.py  test_cda_direct_archive_downloader.py  test_cdaweb.py  test_cdaweb_contract.py  test_cdaweb_failures.py  test_cdf_codec.py  test_cdpp3dview.py  test_codecs.py  test_common.py  test_config_module.py  test_csa.py  test_csa_contract.py  test_dataset.py  test_datetimerange.py  test_direct_archive_downloader.py  test_direct_archive_inventory.py  test_disable_ws.py  test_e2e_smoke.py  test_file_access.py  test_filtering.py  test_generate_cdpp3dview_frames_table.py  test_genericarchive_contract.py  test_hapi.py  test_hapi_codecs.py  test_http_module.py  test_infra_smoke.py  test_inventories.py  test_istp_hints.py  test_netcdf_codec.py  (+17 more)
tests/resources/: HAPI_amda_imf_all.binary  HAPI_ndData_TimeIndependent_Axis.binary  HAPI_ndData_TimeIndependent_Axis.csv  HAPI_ndData_TimeVarying_Axis.binary  HAPI_ndData_TimeVarying_Axis.csv  HAPI_sample_TestData3.3.binary  HAPI_sample_csv.csv  HAPI_sample_csv_multiple_vars.csv  ac_k2_mfi_20220101_v03.cdf  amda_sample_spectro.txt  derived_param.txt  derived_param2.txt  ela_l1_state_pred_00000000_v01.cdf  erg_pwe_hfa_l3_1min_00000000_v01.cdf  erg_pwe_hfa_l3_1min_00000000_v01.skeleton.yaml  ge_h0_cpi_00000000_v01.cdf  obsdatatree.xml  sscweb_observatories.xml  sscweb_trajectory.xml  uiowa_eph_tool_sample.csv  uiowa_eph_tool_sample2.csv
(+110 files in other folders)
