[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "uv-dynamic-versioning>=0.7"]

[project]
name = 'speasy'
dynamic = ["version"]
description = "A simple Python package to deal with main Space Physics WebServices (CDA, CSA, AMDA and SSC)."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = ['PyYAML',
 'appdirs',
 'astropy',
 'astroquery',
 'diskcache',
 'humanize',
 'matplotlib',
 'numpy',
 'packaging',
 'pandas',
 'pyistp>=0.7.2',
 'python-dateutil',
 'requests',
 'scipy',
 'tqdm',
 'urllib3>=1.26.0',
 'certifi',
 'pysocks'
]


[project.urls]
homepage = "https://github.com/SciQLop/speasy"

[project.optional-dependencies]
zstd = ["pyzstd"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["speasy"]

[tool.hatch.build.targets.sdist]
include = [
    "speasy",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "HISTORY.rst",
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "pyproject.toml",
]
exclude = [
    "tests/cassettes",
    "docs/_build",
    ".publish_staging",
]

[dependency-groups]
dev = [
    "ddt",
    "pytest",
    "pytest-cov",
    "pytest-recording",
    "pytest-httpserver",
    "pytest-sugar",
    "pyzstd",
    "watchdog",
    "IPython",
]
docs = [
    "sphinx!=5.2.0.post0",
    "sphinx-rtd-theme",
    "argh",
    "numpydoc",
    "sphinx-gallery",
    "nbsphinx",
    "ipympl",
    "ipywidgets",
    "sphinx-codeautolink==0.15.2",
    "sphinxcontrib-apidoc",
    "pandoc",
]

[tool.pytest.ini_options]
# `-m unit` makes default `pytest` runs select only the unit tier, keeping
# local dev fast. To run other tiers explicitly:
#   pytest -m contract     # network-hitting tests
#   pytest -m e2e          # end-to-end smoke tests
#   pytest -m ''           # everything (overrides the default filter)
# Note: pytest concatenates addopts before CLI args, and the last `-m` wins,
# so `pytest -m contract tests/test_amda.py` works as expected.
addopts = "-m unit"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "unit: fast deterministic tests with no network access; runs on every push and PR (default)",
    "contract: real-server probes that detect upstream API/data drift; runs on a daily schedule",
    "e2e: end-to-end smoke tests that confirm Speasy works on every supported OS x Python combo; runs on a weekly schedule",
]

[tool.ruff.lint]
select = ["NPY201"]